# llama-pytorch

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/: chat.py  llama2.py  load_weights.py
src/models/: llama2.py
src/utils/: load_weights.py
